@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: March 8, 2009</p>
+      <p>Last Updated: March 14, 2009</p>
     </td>
   </tr>
 </table>
@@ -1345,6 +1345,9 @@ buildroot-0.1.3 2009-02-28 &lt;spudmonkey@racsa.co.cr&gt;
 
 <pre><ul>
 nuttx-0.4.4 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
+
+	* examples/nsh:  A debug option was left on that can (and does) cause
+	  infinite loops and stack overflows.
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
